WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80132
AX: embedded attachments do not report their parents correctly
https://bugs.webkit.org/show_bug.cgi?id=80132
Summary
AX: embedded attachments do not report their parents correctly
chris fleizach
Reported
2012-03-02 02:07:38 PST
When a WebHTMLView has embedded attachments in it, the AXParent of those attachments is wrong. It usually points to the AXScrollView of the web area. That's because there's been no way for WebCore to communicate that this attachment view should actually make believe that it's parent is within the WebCore AX tree. We can fix that by overriding the AXParent in overriden attributes
Attachments
patch
(5.94 KB, patch)
2012-03-02 02:12 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2012-03-02 02:07:59 PST
rdar://10413412
chris fleizach
Comment 2
2012-03-02 02:12:27 PST
Created
attachment 129857
[details]
patch
chris fleizach
Comment 3
2012-03-14 21:20:03 PDT
http://trac.webkit.org/changeset/110819
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug