Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -3529,6 +3529,20 @@ void AccessibilityRenderObject::addAttachmentChildren()
         m_children.append(axWidget);
 }
     
+void AccessibilityRenderObject::updateAttachmentViewParents()
+{
+    // Only the unignored parent should set the attachment parent, because that's what is reflected in the AX 
+    // hierarchy to the client.
+    if (accessibilityIsIgnored())
+        return;
+    
+    size_t length = m_children.size();
+    for (size_t k = 0; k < length; k++) {
+        if (m_children[k]->isAttachment())
+            m_children[k]->overrideAttachmentParent(this);
+    }
+}
+    
 void AccessibilityRenderObject::addChildren()
 {
     // If the need to add more children in addition to existing children arises, 
@@ -3566,6 +3580,7 @@ void AccessibilityRenderObject::addChildren()
     addAttachmentChildren();
     addImageMapChildren();
     addTextFieldChildren();
+    updateAttachmentViewParents();
 }
         
 const AtomicString& AccessibilityRenderObject::ariaLiveRegionStatus() const
